@@ -44,7 +44,11 @@ oss-fuzz 8615 &quot;graphicsmagick/coder_MNG_fuzzer:
 Heap-buffer-overflow in mng_get_long&quot;. (Credit to OSS-Fuzz)
 (ReadMNGImage): Fix leak of MngInfo in error reporting path.
 Fixes oss-fuzz 8604 &quot;graphicsmagick/coder_MNG_fuzzer: Direct-leak
-in ReadMNGImage&quot;. (Credit to OSS-Fuzz)</li>
+in ReadMNGImage&quot;. (Credit to OSS-Fuzz)
+(ReadMNGImage): Verify that claimed chunk size does not exceed
+input size.  Fixes oss-fuzz 8564 &quot;graphicsmagick/coder_MNG_fuzzer:
+Out-of-memory in graphicsmagick_coder_MNG_fuzzer&quot;. (Credit to
+OSS-Fuzz)</li>
 <li>coders/tiff.c (ReadTIFFImage): Reject files with excessive
 samples-per-pixel or extra-samples. Avoids potential issues
 observed in oss-fuzz 8634 &quot;graphicsmagick/coder_BIGTIFF_fuzzer:
