@@ -7,6 +7,10 @@
 	(ReadMNGImage): Fix leak of MngInfo in error reporting path.
 	Fixes oss-fuzz 8604 "graphicsmagick/coder_MNG_fuzzer: Direct-leak
 	in ReadMNGImage". (Credit to OSS-Fuzz)
+	(ReadMNGImage): Verify that claimed chunk size does not exceed
+	input size.  Fixes oss-fuzz 8564 "graphicsmagick/coder_MNG_fuzzer:
+	Out-of-memory in graphicsmagick_coder_MNG_fuzzer". (Credit to
+	OSS-Fuzz)
 
 	* coders/tiff.c (ReadTIFFImage): Reject files with excessive
 	samples-per-pixel or extra-samples. Avoids potential issues
